Bug 94618 - PNM images are not displayed by default
Summary: PNM images are not displayed by default
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-DImg-QImage (other bugs)
Version First Reported In: unspecified
Platform: RedHat Enterprise Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-12-07 16:43 UTC by Roberto Alsina
Modified: 2022-01-08 04:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 7.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roberto Alsina 2004-12-07 16:43:14 UTC
Version:            (using KDE KDE 3.3.1)
Installed from:    RedHat RPMs
OS:                Linux

Simple stuff: my camera (a stv680) has its pictures in PNM format.
Digikam won't display .pnm files saved in its albums, so it will appear as if the images failed to download.

I simply added .pnm to the list of files to display, but maybe the real solution would be to use something like "file" to see whether a new file is an image or not.

Or at least make sure that when you save a file from the camera to an album, it gets displayed :-)
Comment 1 Renchi Raju 2004-12-08 05:48:01 UTC
added pnm to default extensions. we do extension based mimetype checks because we also support raw files from different cameras and  there are plenty of raw file formats out there which are propertiary and there doesn't really exist a proper mimetype for them. even the file extensions vary wildly. so the only solution is to use extension based checks, which user can modify.

the pnm  files (in your case) come from libgphoto2, we really don't know all the different extensions for the files which will downloaded from the camera. we just add them, whenever somebody requests us to do so. i guess, we could be smart about it and do a check for each file which was downloaded and add extensions for it to the default extensions list (if not present already).
Comment 2 Renchi Raju 2004-12-08 06:54:50 UTC
CVS commit by pahlibar: 


* when downloading files from the camera, check for the file extension of
each file and added it to the image mimetype list if not found. refresh
the view appropriately.
* minor code cleanup

BUG: 94618


  M +20 -15    digikam/digikamapp.cpp   1.79
  M +0 -2      digikam/digikamapp.h   1.29
  M +20 -0     utilities/cameragui/cameraui.cpp   1.34
  M +3 -0      utilities/cameragui/cameraui.h   1.18
  M +0 -1      utilities/setup/setup.cpp   1.28