* when downloading files from the camera, check for the file extension of each file and added it to the image mimetype list if not found. refresh the view appropriately. * minor code cleanup

BUG: 94618

svn path=/trunk/kdeextragear-3/digikam/; revision=369187